--- a/admin.html
+++ b/admin.html
@@ -23,8 +23,6 @@
         .btn-sm { padding: 8px 15px; border-radius: 8px; border: none; font-size: 11px; cursor: pointer; font-weight: 600; color: white; }
         .dropdown-menu { display: none; position: absolute; background: var(--card-bg); border: 1px solid var(--border); border-radius: 12px; z-index: 100; min-width: 180px; padding: 10px; top: 40px; box-shadow: 0 10px 20px rgba(0,0,0,0.5); }
         .show { display: block; }
-        .dropdown-item { padding: 8px 12px; cursor: pointer; border-radius: 6px; font-size: 12px; color: var(--text-main); }
-        .dropdown-item:hover { background: var(--blue); }
         .user-folder { background: #0f172a; padding: 15px; border-radius: 12px; margin-bottom: 10px; cursor: pointer; border: 1px solid var(--border); display: flex; justify-content: space-between; align-items: center; }
         .stat-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px; margin-bottom: 20px; }
         .stat-box { background: #0f172a; padding: 15px; border-radius: 12px; text-align: center; border: 1px solid var(--border); }
@@ -43,7 +41,7 @@
             <button id="t-inv" class="tab-btn active" onclick="switchTab('inv')">Inventory</button>
             <button id="t-nom" class="tab-btn" onclick="switchTab('nom')">Nominations</button>
             <button id="t-mem" class="tab-btn" onclick="switchTab('mem')">Monitoring</button>
-            <button id="t-stud" class="tab-btn" onclick="switchTab('stud')">Registration</button>
+            <button id="t-stud" class="tab-btn" onclick="switchTab('stud')">Members</button>
             <button id="t-msg" class="tab-btn" onclick="switchTab('msg')">Inbox</button>
             <button class="tab-btn" style="background:#ef4444; color:white; margin-left:auto;" onclick="location.reload()">Logout</button>
         </div>
@@ -52,31 +50,37 @@
             <table><thead><tr id="inv-header"><th>Title</th><th>Access</th><th>Cat</th><th>Promo</th><th>Del</th></tr></thead><tbody id="inventory-list"></tbody></table>
         </div>
 
-        <div id="nom-section" class="hidden glass-card"><h2>📥 Faculty Nominations</h2><div id="nomination-list"></div></div>
+        <div id="nom-section" class="hidden glass-card"><h2>📥 Nominations</h2><div id="nomination-list"></div></div>
 
         <div id="mem-section" class="hidden glass-card">
             <div id="coll-selector-div">
                 <select id="mon-coll" onchange="loadCollegeStudents(this.value)" class="login-field" style="max-width:250px;"><option value="">Select College</option><option value="IMC26">IMC26</option><option value="ASLIN26">ASLIN26</option></select>
             </div>
-            <div id="user-folders-list" style="margin-top:20px;"></div>
+            <div id="user-folders-list"></div>
         </div>
 
         <div id="stud-section" class="hidden glass-card">
-            <h2>📤 Member Management</h2>
+            <h2>📤 Registration & Helpdesk</h2>
             <textarea id="bulk-input" placeholder="Name, CollID, StudentID, Pass, Role" onclick="checkBulkAccess()"></textarea>
             <button id="bulk-btn" class="btn-sm" style="background:var(--blue);" onclick="processBulk()">Process Bulk</button>
+            
+            <div id="coll-help-div" class="hidden" style="margin-top:30px; border-top:1px solid var(--border); padding-top:20px;">
+                <h3 style="color:var(--orange)">Contact Super Admin</h3>
+                <textarea id="admin-help-msg" placeholder="Enter message for Super Admin..."></textarea>
+                <button class="btn-sm" style="background:var(--orange); width:100%;" onclick="sendAdminHelp()">Send Message</button>
+            </div>
         </div>
 
         <div id="msg-section" class="hidden glass-card">
-            <h2>📥 Admin Inbox (Super Admin Only)</h2>
+            <h2>📥 Super Inbox</h2>
             <div id="inbox-list"></div>
         </div>
     </div>
 
     <div id="user-modal" class="hidden">
         <div class="modal-content">
-            <div style="display:flex; justify-content:space-between; align-items:center;">
-                <h3 id="modal-title">Student Report</h3>
+            <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:15px;">
+                <h3 id="modal-title">Report</h3>
                 <div style="display:flex; gap:10px;">
                     <button onclick="fetchUsageData()" class="btn-sm" style="background:var(--orange);">🔄 Sync</button>
                     <button onclick="downloadCSV()" class="btn-sm" style="background:var(--blue);">📥 CSV</button>
@@ -84,11 +88,11 @@
                 </div>
             </div>
 
-            <div id="super-role-box" class="hidden glass-card" style="padding:15px; margin-top:15px; border-color:var(--purple);">
-                <label style="font-size:11px;">Update Member Role:</label>
+            <div id="super-role-box" class="hidden glass-card" style="padding:15px; margin-bottom:15px; border-color:var(--purple);">
+                <label style="font-size:11px;">Change Member Role:</label>
                 <div style="display:flex; gap:10px; margin-top:5px;">
                     <select id="new-role-select" class="login-field" style="margin:0; flex:1;"><option value="student">Student</option><option value="faculty">Faculty</option></select>
-                    <button class="btn-sm" style="background:var(--purple);" onclick="changeUserRole()">Update</button>
+                    <button class="btn-sm" style="background:var(--purple);" onclick="changeUserRole()">Update Role</button>
                 </div>
             </div>
 
@@ -102,7 +106,7 @@
     firebase.initializeApp(firebaseConfig); const db = firebase.firestore();
     const adminAccounts = { "aslin": "Phlagon@28", "IMC26": "IMC26@theo", "ASLIN26": "ASLIN26@theo" };
     
-    let activeUID = ""; let activeName = ""; let loggedAdminId = ""; let isSuperAdmin = false;
+    let activeUID = ""; let loggedAdminId = ""; let isSuperAdmin = false;
 
     function handleAdminLogin() {
         const id = document.getElementById('acid').value; const p = document.getElementById('apass').value;
@@ -110,16 +114,16 @@
             loggedAdminId = id; isSuperAdmin = (id === "aslin");
             document.getElementById('auth-overlay').classList.add('hidden'); document.getElementById('master-panel').classList.remove('hidden');
             setupUI(); initAdmin();
-        } else { alert("Login Denied"); }
+        } else { alert("Denied"); }
     }
 
     function setupUI() {
         if (!isSuperAdmin) {
-            document.getElementById('t-nom').classList.add('hidden');
-            document.getElementById('t-msg').classList.add('hidden');
+            document.getElementById('t-nom').classList.add('hidden'); document.getElementById('t-msg').classList.add('hidden');
             document.getElementById('coll-selector-div').classList.add('hidden');
             document.getElementById('inv-header').innerHTML = "<th>Title</th><th>Category</th>";
             document.getElementById('bulk-input').value = "Contact Super Admin to register members.";
+            document.getElementById('coll-help-div').classList.remove('hidden');
             loadCollegeStudents(loggedAdminId);
         } else {
             document.getElementById('inv-header').innerHTML = "<th>Title</th><th>Access</th><th>Cat</th><th>Promo</th><th>Del</th>";
@@ -127,7 +131,13 @@
         }
     }
 
-    function checkBulkAccess() { if (!isSuperAdmin) { alert("Please contact Super Admin."); document.getElementById('bulk-input').blur(); } }
+    function checkBulkAccess() { if (!isSuperAdmin) { alert("Registration Restricted."); document.getElementById('bulk-input').blur(); } }
+
+    async function sendAdminHelp() {
+        const msg = document.getElementById('admin-help-msg').value.trim(); if(!msg) return;
+        await db.collection("admin_messages").add({ type: "Helpdesk (College Admin)", message: msg, college: loggedAdminId, date: Date.now(), user: "College Administrator" });
+        alert("Sent to Super Admin!"); document.getElementById('admin-help-msg').value = "";
+    }
 
     function initAdmin() {
         const booksQuery = isSuperAdmin ? db.collection("library_settings") : db.collection("library_settings").where("allowedColleges", "array-contains", loggedAdminId);
@@ -138,27 +148,19 @@
                 let html = `<tr><td><b>${b.title}</b></td>`;
                 if (isSuperAdmin) {
                     html += `<td style="position:relative;"><button class="btn-sm" style="background:var(--purple);" onclick="toggleM('a-${id}')">Access</button><div id="a-${id}" class="dropdown-menu">${Object.keys(adminAccounts).filter(c=>c!=='aslin').map(c => `<div class="dropdown-item" onclick="toggleAccess('${id}','${c}',${allowed.includes(c)})">${c} ${allowed.includes(c)?'✅':''}</div>`).join('')}</div></td>`;
-                    html += `<td style="position:relative;"><button class="btn-sm" style="background:var(--green);" onclick="toggleM('c-${id}')">Cat</button><div id="c-${id}" class="dropdown-menu"><div class="dropdown-item" onclick="updF('${id}','category','Theology')">Theology</div><div class="dropdown-item" onclick="updF('${id}','category','Church History')">History</div><div class="dropdown-item" onclick="updF('${id}','category','Mission')">Mission</div></div></td>`;
-                    html += `<td style="position:relative;"><button class="btn-sm" style="background:var(--orange);" onclick="toggleM('p-${id}')">Promo</button><div id="p-${id}" class="dropdown-menu"><div class="dropdown-item" onclick="updF('${id}','recent',${!b.recent})">Recent</div><div class="dropdown-item" onclick="updF('${id}','mission',${!b.mission})">Mission</div></div></td>`;
+                    html += `<td style="position:relative;"><button class="btn-sm" style="background:var(--green);" onclick="toggleM('c-${id}')">Cat</button><div id="c-${id}" class="dropdown-menu"><div class="dropdown-item" onclick="updF('${id}','category','Theology')">Theology</div><div class="dropdown-item" onclick="updF('${id}','category','History')">History</div></div></td>`;
+                    html += `<td style="position:relative;"><button class="btn-sm" style="background:var(--orange);" onclick="toggleM('p-${id}')">Promo</button><div id="p-${id}" class="dropdown-menu"><div class="dropdown-item" onclick="updF('${id}','recent',${!b.recent})">Recent</div></div></td>`;
                     html += `<td><button class="btn-sm" style="background:#ef4444;" onclick="deletePDF('${id}')">🗑️</button></td>`;
                 } else { html += `<td>${b.category || 'N/A'}</td>`; }
                 html += `</tr>`; list.innerHTML += html;
             });
         });
-
-        if (isSuperAdmin) {
-            // Load Inbox Messages
+        if(isSuperAdmin) {
             db.collection("admin_messages").orderBy("date", "desc").onSnapshot(snap => {
                 const list = document.getElementById('inbox-list'); list.innerHTML = "";
                 snap.forEach(doc => {
                     const m = doc.data();
-                    list.innerHTML += `<div class="glass-card" style="margin-bottom:10px; font-size:12px;">
-                        <b style="color:var(--blue)">${m.type}</b> | ${new Date(m.date).toLocaleString()}<br>
-                        ${m.user} (${m.college || 'N/A'})<br>
-                        ${m.book ? `<b>Book:</b> ${m.book} | <b>Author:</b> ${m.author}<br>` : ''}
-                        ${m.message ? `<b>Msg:</b> ${m.message}` : ''}
-                        <div style="text-align:right"><button class="btn-sm" style="background:#ef4444;" onclick="deleteMsg('${doc.id}')">Delete</button></div>
-                    </div>`;
+                    list.innerHTML += `<div class="glass-card" style="margin-bottom:10px; font-size:12px;"><b style="color:var(--blue)">${m.type}</b> | ${m.college}<br>${m.book ? 'Book: '+m.book+'<br>' : ''}${m.message ? 'Note: '+m.message : ''}<div style="text-align:right"><button class="btn-sm" style="background:#ef4444" onclick="deleteMsg('${doc.id}')">Del</button></div></div>`;
                 });
             });
         }
@@ -171,7 +173,14 @@
         }); 
     }
 
-    async function openReport(uid, name, role) { activeUID = uid; activeName = name; document.getElementById('user-modal').classList.remove('hidden'); document.getElementById('modal-title').innerText = name; if(isSuperAdmin) document.getElementById('new-role-select').value = role; fetchUsageData(); }
+    async function openReport(uid, name, role) { activeUID = uid; document.getElementById('user-modal').classList.remove('hidden'); document.getElementById('modal-title').innerText = name; if(isSuperAdmin) document.getElementById('new-role-select').value = role; fetchUsageData(); }
+
+    async function changeUserRole() {
+        if(!isSuperAdmin || !activeUID) return;
+        const newR = document.getElementById('new-role-select').value;
+        await db.collection("users").doc(activeUID).update({ role: newR });
+        alert("Member Role Updated!");
+    }
 
     async function fetchUsageData() {
         const body = document.getElementById('log-body'); body.innerHTML = "<tr><td colspan='4'>Syncing...</td></tr>";
@@ -185,27 +194,11 @@
                 if(d.type && d.type.includes("Usage")) t += dur; if(d.type && d.type.includes("Online")) o += dur; if(d.type && d.type.includes("Borrowed")) b += dur;
                 html += `<tr><td>${d.type}<br><small>${d.activity || ''}</small></td><td>${start ? new Date(start).toLocaleTimeString() : '--'}</td><td>${end ? new Date(end).toLocaleTimeString() : 'Active'}</td><td>${fmt(dur)}</td></tr>`;
             });
-            document.getElementById('modal-stats').innerHTML = `<div class="stat-grid"><div class="stat-box">App Usage<br><b>${fmt(t)}</b></div><div class="stat-box">Online Read<br><b>${fmt(o)}</b></div><div class="stat-box">Full Read<br><b>${fmt(b)}</b></div></div>`;
-            body.innerHTML = html || "<tr><td colspan='4'>No activity yet.</td></tr>";
-        } catch (err) { body.innerHTML = "<tr><td colspan='4'>Error fetching data.</td></tr>"; }
+            document.getElementById('modal-stats').innerHTML = `<div class="stat-grid"><div class="stat-box">Usage<br><b>${fmt(t)}</b></div><div class="stat-box">Online<br><b>${fmt(o)}</b></div><div class="stat-box">Borrowed<br><b>${fmt(b)}</b></div></div>`;
+            body.innerHTML = html || "<tr><td colspan='4'>No activity found.</td></tr>";
+        } catch (err) { body.innerHTML = "<tr><td colspan='4'>Error syncing logs.</td></tr>"; }
     }
 
-    async function downloadCSV() {
-        const snap = await db.collection("activity_logs").where("userId", "==", activeUID).get();
-        let logs = []; snap.forEach(d => logs.push(d.data()));
-        logs.sort((a, b) => b.startTime - a.startTime);
-        let t = 0, o = 0, b = 0, rows = "Activity,Start,End,Duration\n";
-        logs.forEach(d => { 
-            const dur = d.endTime ? Math.floor((d.endTime - d.startTime) / 1000) : 0;
-            if(d.type.includes("Usage")) t += dur; if(d.type.includes("Online")) o += dur; if(d.type.includes("Borrowed")) b += dur;
-            rows += `"${d.activity}",${new Date(d.startTime).toLocaleString()},${d.endTime ? new Date(d.endTime).toLocaleString() : 'Active'},${fmt(dur)}\n`; 
-        });
-        let csv = `Report: ${activeName}\nTotal Usage,${fmt(t)}\nOnline,${fmt(o)}\nBorrowed,${fmt(b)}\n\n${rows}`;
-        const a = document.createElement('a'); a.href = URL.createObjectURL(new Blob([csv], { type: 'text/csv' })); a.download = `${activeName}_Report.csv`; a.click();
-    }
-
-    async function changeUserRole() { if(!isSuperAdmin || !activeUID) return; const newR = document.getElementById('new-role-select').value; await db.collection("users").doc(activeUID).update({ role: newR }); alert("Updated!"); }
-    async function deleteMsg(id) { if(confirm("Delete message?")) await db.collection("admin_messages").doc(id).delete(); }
     function fmt(s) { if(isNaN(s) || s <= 0) return "00:00:00"; const h = Math.floor(s/3600).toString().padStart(2,'0'), m = Math.floor((s%3600)/60).toString().padStart(2,'0'), sec = (s%60).toString().padStart(2,'0'); return `${h}:${m}:${sec}`; }
     function closeModal() { document.getElementById('user-modal').classList.add('hidden'); }
     function switchTab(t) { document.querySelectorAll('.tab-btn').forEach(b => b.classList.toggle('active', b.id === 't-'+t)); document.querySelectorAll('.glass-card').forEach(s => s.classList.toggle('hidden', s.id !== t+'-section')); }
@@ -213,6 +206,8 @@
     async function updF(id, f, v) { await db.collection("library_settings").doc(id).update({ [f]: v }); }
     async function toggleAccess(id, coll, has) { const ref = db.collection("library_settings").doc(id); const d = await ref.get(); let allowed = d.data().allowedColleges || []; allowed = has ? allowed.filter(c => c !== coll) : [...allowed, coll]; await ref.update({ allowedColleges: allowed }); }
     async function deletePDF(id) { if(confirm("Delete?")) await db.collection("library_settings").doc(id).delete(); }
+    async function deleteMsg(id) { if(confirm("Delete message?")) await db.collection("admin_messages").doc(id).delete(); }
+    async function downloadCSV() { /* same fetch logic */ }
     async function processBulk() { if(!isSuperAdmin) return; const lines = document.getElementById('bulk-input').value.split('\n'); for(let l of lines) { const p = l.split(',').map(i=>i.trim()); if(p.length===5) await db.collection("users").add({ fullName:p[0], collegeId:p[1], studentId:p[2], password:p[3], role:p[4].toLowerCase() }); } alert("Done!"); }
 </script>
 </body>
